added KernelChatBenchSvgTest to compare different modes